Added memberhip type to customer. Added migration for that relationship.

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -204,11 +204,16 @@
     <Compile Include="Migrations\201706150702356_AddIsSubscribedToCustomer.Designer.cs">
       <DependentUpon>201706150702356_AddIsSubscribedToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706150712375_AddMembershipType.cs" />
+    <Compile Include="Migrations\201706150712375_AddMembershipType.Designer.cs">
+      <DependentUpon>201706150712375_AddMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -304,6 +309,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706150702356_AddIsSubscribedToCustomer.resx">
       <DependentUpon>201706150702356_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706150712375_AddMembershipType.resx">
+      <DependentUpon>201706150712375_AddMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
