Added PopulateMemberShipType migration

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -208,6 +208,10 @@
     <Compile Include="Migrations\201706150712375_AddMembershipType.Designer.cs">
       <DependentUpon>201706150712375_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706150735480_PopulateMembershipType.cs" />
+    <Compile Include="Migrations\201706150735480_PopulateMembershipType.Designer.cs">
+      <DependentUpon>201706150735480_PopulateMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -312,6 +316,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706150712375_AddMembershipType.resx">
       <DependentUpon>201706150712375_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706150735480_PopulateMembershipType.resx">
+      <DependentUpon>201706150735480_PopulateMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
