Populated customer table. Removed hardcoded customers and retrieve them from db

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -212,6 +212,14 @@
     <Compile Include="Migrations\201706150735480_PopulateMembershipType.Designer.cs">
       <DependentUpon>201706150735480_PopulateMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706150743027_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201706150743027_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201706150743027_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706160532079_AddMembershipTypeData.cs" />
+    <Compile Include="Migrations\201706160532079_AddMembershipTypeData.Designer.cs">
+      <DependentUpon>201706160532079_AddMembershipTypeData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -319,6 +327,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706150735480_PopulateMembershipType.resx">
       <DependentUpon>201706150735480_PopulateMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706150743027_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201706150743027_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706160532079_AddMembershipTypeData.resx">
+      <DependentUpon>201706160532079_AddMembershipTypeData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
