--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -220,6 +220,14 @@
     <Compile Include="Migrations\201706160532079_AddMembershipTypeData.Designer.cs">
       <DependentUpon>201706160532079_AddMembershipTypeData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706160616179_AddNameFieldToMembershipType.cs" />
+    <Compile Include="Migrations\201706160616179_AddNameFieldToMembershipType.Designer.cs">
+      <DependentUpon>201706160616179_AddNameFieldToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706160631109_PopulateMembershipTypeNames.cs" />
+    <Compile Include="Migrations\201706160631109_PopulateMembershipTypeNames.Designer.cs">
+      <DependentUpon>201706160631109_PopulateMembershipTypeNames.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -333,6 +341,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706160532079_AddMembershipTypeData.resx">
       <DependentUpon>201706160532079_AddMembershipTypeData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706160616179_AddNameFieldToMembershipType.resx">
+      <DependentUpon>201706160616179_AddNameFieldToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706160631109_PopulateMembershipTypeNames.resx">
+      <DependentUpon>201706160631109_PopulateMembershipTypeNames.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
