--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -228,6 +228,10 @@
     <Compile Include="Migrations\201706160631109_PopulateMembershipTypeNames.Designer.cs">
       <DependentUpon>201706160631109_PopulateMembershipTypeNames.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706192045441_AddBirthdateToCustomer.cs" />
+    <Compile Include="Migrations\201706192045441_AddBirthdateToCustomer.Designer.cs">
+      <DependentUpon>201706192045441_AddBirthdateToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -347,6 +351,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706160631109_PopulateMembershipTypeNames.resx">
       <DependentUpon>201706160631109_PopulateMembershipTypeNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706192045441_AddBirthdateToCustomer.resx">
+      <DependentUpon>201706192045441_AddBirthdateToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
