--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -232,12 +232,21 @@
     <Compile Include="Migrations\201706192045441_AddBirthdateToCustomer.Designer.cs">
       <DependentUpon>201706192045441_AddBirthdateToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706192237579_ExpandMovieModel.cs" />
+    <Compile Include="Migrations\201706192237579_ExpandMovieModel.Designer.cs">
+      <DependentUpon>201706192237579_ExpandMovieModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706192242393_PopulateGenres.cs" />
+    <Compile Include="Migrations\201706192242393_PopulateGenres.Designer.cs">
+      <DependentUpon>201706192242393_PopulateGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -308,6 +317,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -354,6 +364,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706192045441_AddBirthdateToCustomer.resx">
       <DependentUpon>201706192045441_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706192237579_ExpandMovieModel.resx">
+      <DependentUpon>201706192237579_ExpandMovieModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706192242393_PopulateGenres.resx">
+      <DependentUpon>201706192242393_PopulateGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
