--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -192,6 +192,15 @@
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Migrations\201706212343352_ExpandMovieModel.cs" />
+    <Compile Include="Migrations\201706212343352_ExpandMovieModel.Designer.cs">
+      <DependentUpon>201706212343352_ExpandMovieModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706220034023_PopulateGenres.cs" />
+    <Compile Include="Migrations\201706220034023_PopulateGenres.Designer.cs">
+      <DependentUpon>201706220034023_PopulateGenres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -232,14 +241,6 @@
     <Compile Include="Migrations\201706192045441_AddBirthdateToCustomer.Designer.cs">
       <DependentUpon>201706192045441_AddBirthdateToCustomer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201706192237579_ExpandMovieModel.cs" />
-    <Compile Include="Migrations\201706192237579_ExpandMovieModel.Designer.cs">
-      <DependentUpon>201706192237579_ExpandMovieModel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706192242393_PopulateGenres.cs" />
-    <Compile Include="Migrations\201706192242393_PopulateGenres.Designer.cs">
-      <DependentUpon>201706192242393_PopulateGenres.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -250,7 +251,7 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
+    <Compile Include="ViewModels\CustomerformViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -320,6 +321,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -367,11 +369,11 @@
     <EmbeddedResource Include="Migrations\201706192045441_AddBirthdateToCustomer.resx">
       <DependentUpon>201706192045441_AddBirthdateToCustomer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706192237579_ExpandMovieModel.resx">
-      <DependentUpon>201706192237579_ExpandMovieModel.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706212343352_ExpandMovieModel.resx">
+      <DependentUpon>201706212343352_ExpandMovieModel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706192242393_PopulateGenres.resx">
-      <DependentUpon>201706192242393_PopulateGenres.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706220034023_PopulateGenres.resx">
+      <DependentUpon>201706220034023_PopulateGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
