--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Migrations\201706220514362_AddXmasGenre.Designer.cs">
       <DependentUpon>201706220514362_AddXmasGenre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
