--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -204,10 +204,12 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\CustomersController.cs" />
+    <Compile Include="Controllers\Api\MoviesController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Dtos\CustomerDto.cs" />
+    <Compile Include="Dtos\MovieDto.cs" />
     <Compile Include="Migrations\201706212343352_ExpandMovieModel.cs" />
     <Compile Include="Migrations\201706212343352_ExpandMovieModel.Designer.cs">
       <DependentUpon>201706212343352_ExpandMovieModel.cs</DependentUpon>
